--- a/Final_proyect/src/frontend/styles_login.css
+++ b/Final_proyect/src/frontend/styles_login.css
@@ -32,6 +32,7 @@ body {
 
 }
 
+
 h2 {
     margin-bottom: 20px;
     color: #333;
@@ -57,7 +58,7 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #fbff00;
+    background-color: #ffd518;
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 4px;
@@ -66,16 +67,19 @@ button {
     font-family: Arial, sans-serif;
 }
 
+
+button :hover{
+
+    background-color: #ffc012d3;
+
+}
 .create_account a {
 
     color : black;
     font-family: Arial, sans-serif;
 }
 
-#error-message {
-    color: red;
-    font-size: 14px;
-}
+
 
 
 /* create account*/
@@ -87,79 +91,19 @@ button {
     width: 300px;
     text-align: center;
 }
-
-
-/*home */
-.search_bar {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    display: flex;
-    align-items: center;
-}
-
-.search_bar input {
-    padding: 5px;
-    font-size: 16px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.search_bar button {
-    padding: 5px 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #eaff00;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-}
-
-.search_bar button:hover {
-    background-color: #eaff01;
-}
-
-#products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 1rem;
-}
-
-.product {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 1rem;
-    margin: 1rem;
-    width: calc(33% - 2rem);
-    box-sizing: border-box;
+footer {
+    width: 100%;
     text-align: center;
+    padding: 1rem;
+    background-color: #161933;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
-.product img {
-    max-width: 100%;
-    height: auto;
+footer p {
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-.product h3 {
-    margin: 0.5rem 0;
-}
-
-.product p {
-    margin: 0.5rem 0;
-}
-
-.product button {
-    padding: 10px 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #eaff00;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-}
-
-.product button:hover {
-    background-color: #e7ff18;
-}
