--- a/Final_proyect/src/frontend/styles_addproduct.css
+++ b/Final_proyect/src/frontend/styles_addproduct.css
@@ -1,3 +1,4 @@
+
 .header_container {
     display: flex;
     justify-content: space-between;
@@ -6,9 +7,6 @@
     background-color: #f8f8f8; 
     border-bottom: 1px solid #ccc; 
 }
-
-
-
 
 .page_name {
     font-size: 24px;
@@ -60,18 +58,6 @@ label {
 }
 
 
-#shoppingcar_button {
-    background-color: #ffd518;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-#shoppingcar_button:hover {
-    background-color: #ffc012d3;
-}
 
 
 /*home */
@@ -130,6 +116,42 @@ label {
     color: black;
     font-size: 18px;
     font-family: Arial, sans-serif;
+}
+.products_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product {
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #f9f9f9;
+    font-family: Arial, sans-serif;
+
+}
+
+.product img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+.product button {
+    padding: 10px 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #ffd518;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.product button:hover {
+    background-color: #ffc012d3;
 }
 footer {
     width: 100%;
