--- a/Final_proyect/src/frontend/styles_create_account.css
+++ b/Final_proyect/src/frontend/styles_create_account.css
@@ -10,18 +10,18 @@ body {
 }
 
 
-.page_name{
-    width: 100%;
-    font-family: Arial, sans-serif;
-    font-size: 24 px;
+.page_name {
+    font-size: 24px;
     color: #000000;
+    font-family: Arial, sans-serif;
+    width: 100%;
+    text-align: left;
     position: fixed;
     top: 0;
-    left : 0;
-    justify-content: center;
-    align-items: center;
-
-
+    left: 0;
+    background-color: #f8f8f8; 
+    padding: 10px 0; 
+    z-index: 1000; 
 }
 
 h2 {
