--- a/Final_proyect/src/frontend/styles_login.css
+++ b/Final_proyect/src/frontend/styles_login.css
@@ -9,6 +9,14 @@ body {
     background-color: #f0f0f0;
 }
 
+.header_container {
+    display: flex;
+    
+    
+    padding: 10px 20px;
+    background-color: #f0f0f0;
+    border-bottom: 1px solid #ccc; 
+}
 
 .login-container {
     background-color: white;
@@ -18,18 +26,18 @@ body {
     width: 300px;
     text-align: center;
 }
-.page_name{
-    width: 100%;
-    font-family: Arial, sans-serif;
-    font-size: 24 px;
+.page_name {
+    font-size: 24px;
     color: #000000;
+    font-family: Arial, sans-serif;
+    width: 100%;
+    text-align: left;
     position: fixed;
     top: 0;
-    left : 0;
-    justify-content: center;
-    align-items: center;
-
-
+    left: 0;
+    background-color: #f8f8f8; 
+    padding: 10px 0; 
+    z-index: 1000; 
 }
 
 
