--- a/Final_proyect/src/frontend/styles_home.css
+++ b/Final_proyect/src/frontend/styles_home.css
@@ -57,7 +57,7 @@ label {
 }
 
 
-#shoppingcar_button {
+#shoppingcart_button {
     background-color: #ffd518;
     color: black;
     border: none;
@@ -66,7 +66,7 @@ label {
     border-radius: 5px;
 }
 
-#shoppingcar_button:hover {
+#shoppingcart_button:hover {
     background-color: #ffc012d3;
 }
 
