--- a/Final_proyect/src/frontend/Bmazonapp/templates/add_product.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/add_product.html
@@ -23,7 +23,7 @@
             
             
             <div class="user_options">
-                <img src="usericon.jpg" alt="User Icon" class="user_icon">
+                <img src="../static/images/usericon.jpg" class="user_icon">
                 <button id="logout_button">Logout</button>
             </div>
            
