--- a/Final_proyect/src/frontend/Bmazonapp/templates/homekitchen.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/homekitchen.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a website from a web store">
-        <title>Fashion</title>
+        <title>Home and kitchen</title>
         <link rel="stylesheet" href="styles_shoppingcart.css">
     </head>
 
@@ -25,14 +25,14 @@
             </div>
             
             <div class="user_options">
-                <img src="usericon.jpg" alt="User Icon" class="user_icon">
+                <img src="../static/images/usericon.jpg" alt="User Icon" class="user_icon">
                 <button id="logout_button">Logout</button>
             </div>
            
         </header>
 
         <br>
-        <h2 class = "ui_name"> Fashion </h2>
+        <h2 class = "ui_name"> Home and kitchen </h2>
 
         <script src="script_login.js"></script>
 
