--- a/Final_proyect/src/frontend/Bmazonapp/templates/login.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a website from a web store">
         <title>Login</title>
-        <link rel="stylesheet" href="styles_login.css">
+        <link rel="stylesheet" href="../static/css/styles_login.css">
     </head>
 
 
