--- a/Final_proyect/src/frontend/Bmazonapp/templates/product1.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/product1.html
@@ -19,7 +19,7 @@
             <button id="shoppingcart_button">Shopping cart</button>
         </div>
         <div class="user_options">
-            <img src="usericon.jpg" alt="User Icon" class="user_icon">
+            <img src="../static/images/usericon.jpg" alt="User Icon" class="user_icon">
             <button id="logout_button">Logout</button>
         </div>
     </header>
