--- a/Final_proyect/src/frontend/Bmazonapp/templates/login.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/login.html
@@ -27,7 +27,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
                 
-                <button type="login">Login</button>
+                <button onclick="call_Login()" type="login">Login</button>
                 <p id="error-message"></p>
                 
             </form>
@@ -37,18 +37,10 @@
         </div>
         <footer>
                 <p>&copy; 2024 Bmazon</p>
-        </footer>   
-        <script src="script_login.js"></script>
-
-
-
-    
-        
-                    
+        </footer>            
 
     </body>
 
-
-
+    <script src="../static/Jscripts/script_login.js"></script> 
 
 </html>
