--- a/Final_proyect/src/frontend/Bmazonapp/templates/create_account.html
+++ b/Final_proyect/src/frontend/Bmazonapp/templates/create_account.html
@@ -1,14 +1,16 @@
-<html> 
+{% load static %}
+<!DOCTYPE html>
+<html lang="en"> 
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a website from a web store">
         <title>Create account</title>
-        <link rel="stylesheet" href="styles_create_account.css">
+        <link rel="stylesheet" href="{% static 'css/styles_create_account.css' %}">
+        <script src="{% static 'Jscripts/script_createuser.js' %}"></script>
     </head>
 
-    
     <body>
 
         <header>
@@ -27,26 +29,15 @@
             <label for="password">Password:</label>
             <input type="text" id="password" name="password" required>
 
-            <button type="create_account">Create account</button>
+            <button onclick="createUser()" type="create_account">Create account</button>
             <p id="error-message"></p>
             </form>
         </div>
-        
+        <div id="result"></div>
         <footer>
             <p>&copy; 2024 Bmazon</p>
-        </footer>
-        
-        <script src="script_login.js"></script>
-
-
-
-    
-        
-                    
+        </footer>       
 
     </body>
-
-
-
 
 </html>
