--- a/Final_proyect/src/frontend2/styles_home.css
+++ b/Final_proyect/src/frontend2/styles_home.css
@@ -186,3 +186,21 @@ footer p {
     margin: 0;
     font-family: Arial, sans-serif;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+    color: #333;
+    font-weight: bold;
+}
